# fun-gui

./: .ghci  .gitignore  .gitmodules  .travis.yml  README.md  fun-gui.cabal
FilesExamples/: AltoOrden.fun  And.fun  GeneralizationExample.fun  InducExample.fun  MutualRecursion.fun  P.fun  Polinomios.fun  Sum.fun  SumVerificated.fun  and.fun  sum.fun  sumVerificated.fun
GUI/: AxiomList.hs  Completion.hs  Config.hs  Console.hs  DeclList.hs  EditBook.hs  EvalConsole.hs  File.hs  GState.hs  Gui.hs  InfoConsole.hs  InsertDialogs.hs  Main.hs  SymbolList.hs  Utils.hs  fun.glade  fun.ui
GUI/EvalConsole/: EvalComm.hs  Parser.hs
GUI/sourceview/language-specs/: fun.lang
GUI/sourceview/styles/: fun.xml
data/: fun.ui
data/sourceview/language-specs/: fun.lang
data/sourceview/styles/: fun.xml
