Name:                fun-gui
Version:             0.1
License:             GPL
License-file:        LICENSE
Author:              Renato Cherini, Alejandro Gadea, Emmanuel Gunther, Miguel Pagano
Maintainer:          Miguel Pagano <pagano@famaf.unc.edu.ar>
Category:            Graphical User Interface
Build-type:          Simple
Cabal-Version:       >=1.2
Tested-with:         GHC==6.10.1
Build-type:          Simple
Bug-reports:         https://github.com/alexgadea/fun-gui/issues


Source-repository this
    Type:     git
    Location: https://github.com/alexgadea/fun-gui
    Branch:   master

Executable fun-gui
    buildable: True
    HS-Source-Dirs: .
    Main-is: GUI/Gui.hs
    GHC-options: -Odph -Wall -threaded
    Build-depends:       base, containers >= 0.4, mtl >= 2.0, reference >= 0.1, 
                         text >= 0.11.1.5, glade >= 0.12.1, gtk >= 0.12.1, 
                         equ >= 0.2, bytestring >= 0.9.1.10, cereal >= 0.3.3.0,
                         glib >= 0.12.1, filepath >= 1.2.0.0, strict >= 0.3.2,
                         pango >= 0.12.1, random >= 1.0.0.3,
                         transformers >= 0.2.2.0, lens-family-core, lens-family, fun,
                         utf8-string >= 0.3, MissingH, lens-family-th, gtksourceview2,
                         parsec >= 3, stm
